# ternary-pack

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  INSIGHT_TERNARY_GPU.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: lib.rs
